# Portfolio

./: README.md
2DArrays/: CMakeLists.txt
BinarySearch/: main.c
BubbleSort/: CMakeLists.txt
C Code/2DArrays/: main.c
C Code/BubbleSort/: main.c
C Code/CQueueUsingArrays/: main.c
C Code/LinkedListADT/: CMakeLists.txt
C Code/LinkedListTestCode/: LLFP.c  library.c  main.c
C Code/MultidimensionalArrayOffset/: CMakeLists.txt  main.c
C Code/StackUsingArrays/: CMakeLists.txt  main.c
CQueueUsingArrays/: CMakeLists.txt
Computer Science Internal Assesment Final Submission (Swift)/: cover_page.htm
Computer Science Internal Assesment Final Submission (Swift)/Documentation/: Crit_D_Video.mov
DequeUsingArrays/: CMakeLists.txt  main.c
Economic Graph Maker Experimental Code (Swift)/: BidirectionDictionary.swift  File.json  File.rtf  JSONToSwiftStructs.swift  XML Example.rtf
Economic Graph Maker Experimental Code (Swift)/Broken Or Legacy/: DrawSelector.swift  PresetInterpreter.swift  PresetInterpreter2.swift  TextField.swift
Economic Graph Maker Experimental Code (Swift)/Economic Graph Maker Version 2/: AppDelegate.swift  Economic_Graph_Maker_Version_2.entitlements
Economic Graph Maker Experimental Code (Swift)/Economic Graph Maker Version 2.xcodeproj/: project.pbxproj
Economic Graph Maker Experimental Code (Swift)/UI/: ViewController.swift  (+1 more)
FPGA Designs/: optimised_fir_filter.slx
LinkedListADT/: library.c  library.h
LinkedListTestCode/: CMakeLists.txt  LLFP.h  library.h
PlatformComponents/: .peers.ini  .vitisWorkspace.json  BRAM_Test_3.xsa
(+3412 files in other folders)
